# KnowIt

./: .buildinfo  CITATION.cff  Interface.py  LICENSE  README.md  README.rst  README.rts  __init__.py  code_conventions.md  dummy_runner_classification.py  dummy_runner_regression.py  environment.yml  genindex.html  index.html  ki_interpreter.py  ki_setup.py  ki_trainer.py  knowit.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  result_structure.md  run_exp.py  search.html  searchindex.js  terminology.md  user_options.md
.github/workflows/: deploy-docs.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/KnowIt/: index.rst.txt
_sources/autoapi/KnowIt/data/: index.rst.txt
_sources/autoapi/KnowIt/default_archs/: index.rst.txt
_sources/autoapi/KnowIt/interpret/: index.rst.txt
_sources/autoapi/KnowIt/knowit/: index.rst.txt
_sources/autoapi/KnowIt/setup/: index.rst.txt
_sources/autoapi/KnowIt/trainer/: index.rst.txt
_sources/markdowns/: quickstart_readme.rst.txt
_sources/markdowns/docs/: data_readme.rst.txt  env_readme.rst.txt  interpreter_readme.rst.txt  trainer_readme.rst.txt
_sources/markdowns/guides/: archs_readme.rst.txt  coding_convention_readme.rst.txt  datasets_readme.rst.txt  result_structure_readme.rst.txt  terminology_readme.rst.txt  user_options_readme.rst.txt
_sources/markdowns/tutorials/basic_sweep/: basic_sweep_tut_readme.rst.txt
analyze/: ki_analyze.py
archs/: CNN.py  FCN.py  MLP.py  TCN.py  arch_how_to.md
autoapi/: index.html
autoapi/KnowIt/: index.html
autoapi/KnowIt/data/: index.html
autoapi/KnowIt/data/base_dataset/: index.html
autoapi/KnowIt/default_archs/: index.html
autoapi/KnowIt/interpret/: index.html
autoapi/KnowIt/knowit/: index.html
autoapi/KnowIt/setup/: index.html
autoapi/KnowIt/trainer/: index.html
data/: __init__.py  base_dataset.py  classification_dataset.py  custom_data_converter.py  data_augmentations.py  data_examples.py  data_framework.md  data_meta_TEMPLATE.yaml  data_scaler.py  data_scaling.py  data_splitter.py  data_splitting.py  dataset.py  ki_data.py  prepared_classification_dataset.py  prepared_dataset.py  raw_data_coversion.py  regression_dataset.py
datasets/: dummy_one.pickle  dummy_zero.pickle
default_archs/: AutoEncoderPlus.py  CNN.py  LSTM.py  LSTMv2.py  MLP.py  TCN.py  TFT.py  arch_how_to.md
default_datasets/: dataset_how_to.md  synth_1.pickle  synth_2_meta.pickle
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/markdowns/: archs_readme.rst  data_readme.rst  datasets_readme.rst  env_readme.rst  interpreter_readme.rst  trainer_readme.rst
env/: env_paths.py  env_user.py  environment_scripts.md
experiments/: NITheCS_penguin_demo_1.py  NITheCS_synth_demo_1.py  default_experiment.yaml  penguin_debug.py  penguin_experiment.yaml
helpers/: fetch_torch_mods.py  file_dir_procs.py  helpers.md  logger.py  metric_adapter.py  metric_registry.py  read_configs.py  viz.py
interpret/: DLS_Captum.py  DL_Captum.py  IntegratedGrad_Captum.py  featureattr.py  interpret_examples.py  interpret_framework.md  interpreter.py  ki_interpreter.py
knowit/: __init__.py  knowit.py
knowit/data/: __init__.py  base_dataset.py  data_scaling.py  data_splitting.py  prepared_dataset.py  raw_data_coversion.py
knowit/default_archs/: CNN.py  LSTM.py  LSTMv2.py  MLP.py  TCN.py  TFT.py  __init__.py
knowit/default_datasets/: synth_2_meta.pickle  synth_c_meta.pickle
knowit/env/: env_paths.py  env_user.py
knowit/helpers/: fetch_torch_mods.py  file_dir_procs.py  helpers.md  viz.py
knowit/interpret/: DLS_Captum.py  DL_Captum.py  IntegratedGrad_Captum.py  __init__.py  featureattr.py  interpreter.py
knowit/setup/: __init__.py  import_custom_arch.py  select_interpretation_points.py  setup_action_args.py  setup_scripts.md  setup_weighted_cross_entropy.py
knowit/trainer/: base_trainer.py  model_config.py  trainer.py  trainer_states.py
markdowns/: quickstart_readme.html
markdowns/docs/: data_readme.html  env_readme.html  interpreter_readme.html  trainer_readme.html
markdowns/guides/: archs_readme.html  coding_convention_readme.html  datasets_readme.html  result_structure_readme.html  terminology_readme.html  user_options_readme.html
markdowns/tutorials/basic_sweep/: basic_sweep_tut_readme.html
markdowns/tutorials/basics/: basics_tut_readme.html
markdowns/tutorials/stateful/: stateful_tut_readme.html
model/: custom_model_TEMPLATE.py  custom_model_converter.py  ki_model.py
setup/: __init__.py  default_args.yaml  import_custom_arch.py  ki_setup.py  select_interpretation_points.py  setup_action_args.py  setup_import_args.py  setup_interpret_args.py  setup_scripts.md  setup_train_args.py  setup_weighted_cross_entropy.py
src/: knowit.py
src/data/: __init__.py  base_dataset.py  data_scaling.py  data_splitting.py  prepared_dataset.py  raw_data_coversion.py
src/env/: env_paths.py
src/helpers/: fetch_torch_mods.py  file_dir_procs.py  viz.py
src/interpret/: DLS_Captum.py  DL_Captum.py  IntegratedGrad_Captum.py  featureattr.py  interpreter.py
src/setup/: __init__.py  import_custom_arch.py  select_interpretation_points.py  setup_action_args.py  setup_weighted_cross_entropy.py
src/trainer/: base_trainer.py  model_config.py  trainer.py  trainer_states.py
tests/: test_advance.py  test_core.py
trainer/: __init__.py  base_trainer.py  ki_trainer.py  manifold_adversarial_training.py  model_config.py  model_config_old_modified_backup.py  train_examples.py  trainer.py  trainer_framework.md  trainer_states.py
tuner/: ki_tuner.py  tuner.py
tutorials/: dummy_runner_classification.py  dummy_runner_regression.py  dummy_sweeper_regression.py  sweep_example.py
tutorials/ETT_basics_tutorial/: ETT_tut.md
tutorials/HP_sweep_tutorial/: sweep_tut.md
tutorials/stateful_tutorial/: stateful_tut.md
(+125 files in other folders)
