[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = 'KnowIt'
version = '1.0.1'

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3.0",
#    "networkx>=3.1",
    "matplotlib>=3.7",
#    "tqdm>=4.66",
#    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "sympy>=1.13.3",
    "pyarrow>=17.0.0"
#    "click>=8.1.7",
]
requires-python = ">=3.8"
authors = [
    {name="Marthinus Wilhelmus Theunissen", email="tiantheunissen@gmail.com"},
    {name="Randle Rabe", email="randlerabe@gmail.com"},
    {name="Harmen Potgieter", email="potgieterharmen@gmail.com"}
]
description = '''KnowIt (Knowledge discovery In Time series data) is an extendable toolkit to build and interpret
deep time series models. It is developed in Python and uses PyTorch Lightning for model building and Captum for model interpreting.'''
readme = "README.md"
license = {text = "Apache-2.0"}
license-files = ["LICENSE/*"]
keywords = ["time_series", "ML"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
    "captum>=0.6.0",
    "wandb>=0.16",

#    "torchvision>=0.16",
#    "torchaudio>=2.1",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "Pillow>=10.0.1",
]

# Heavy Data/Optimization
extra-data = [
#    "pyarrow",
#    "fastparquet",
#    "smac",
#    "dask",
#    "shapely",

]
[project.urls]
Homepage="https://must-deep-learning.github.io/KnowIt/#"
Repository="https://github.com/MUST-Deep-Learning/KnowIt"
Issues="https://github.com/MUST-Deep-Learning/KnowIt/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pylint",
    "black",
    "sphinx>=7.0",
    "myst-parser",
    "pydata-sphinx-theme",
]

[tool.hatch.envs.test]
features = ["torch"]

[tool.hatch.envs.test.scripts]
run = "pytest"